# QSOCKS5

./: CMakeLists.txt  QSOCKS5.sln  README.md
QSOCKS5/: CClientModel.cpp  CClientModel.hpp  CClientSocket.cpp  CClientSocket.hpp  CMainWindow.cpp  CMainWindow.hpp  CRuleSet.cpp  CRuleSet.hpp  CRuleSetDialog.cpp  CRuleSetDialog.hpp  CRuleSetModel.cpp  CRuleSetModel.hpp  QSOCKS5.vcxproj  QSOCKS5.vcxproj.filters  SOCKS5.hpp  Vars.cpp  Vars.hpp  main.cpp  qsocks5.qrc  qtlog.txt  stdafx.h
client/: client.vcxproj  main.cpp
